--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
+@import "~normalize.css";
+
+html {
+    box-sizing: border-box;
+    width: 100vw;
+    overflow-x: hidden;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+        "Droid Sans", "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+.Details_block {
+    width: 400px;
+    padding: 20px 10px 20px 80px;
+    margin-top: 58px;
+    border: 2px solid black;
+    border-radius: 4px;
+    background-color: lightgrey;
+}
+
+p {
+    display: block;
+    margin-right: auto;
+    text-align: left;
+}
+
+/* b {
+    display: inline-block;
+} */
