--- a/src/index.css
+++ b/src/index.css
@@ -18,13 +18,31 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
+.Button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 13px 44px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 0 auto 40px;
+    /* margin-bottom: 40px; */
+    background-color: darkgrey;
+}
+
 .Details_block {
-    width: 400px;
-    padding: 20px 10px 20px 80px;
-    margin-top: 58px;
+    width: 500px;
+    padding: 20px 10px 40px 80px;
+    /* margin-top: 58px; */
     border: 2px solid black;
     border-radius: 4px;
     background-color: lightgrey;
+}
+
+h1 {
+    margin-bottom: 80px;
+    text-decoration: underline;
+    box-shadow: 8px 8px 13px 13px outset darkslategray;
 }
 
 p {
